# HK-MCP

./: .dockerignore  .env.example  .gitignore  .tmuxinator.yml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  settings.toml.example
.github/workflows/: docker-publish.yml
libs/core/: pyproject.toml
libs/core/src/hk_core/: __init__.py  auth.py  config.py  docs.py  server.py
servers/example/src/hk_example/: __init__.py
servers/kolada/: mcp-config.toml.example  pyproject.toml
servers/kolada/src/kolada_mcp/: __init__.py  server.py
servers/kolada/src/kolada_mcp/clients/: __init__.py  kolada.py
servers/kolada/src/kolada_mcp/tools/: __init__.py  data.py  metadata.py  ou_data.py
servers/scb/: pyproject.toml
servers/scb/src/scb_mcp/: __init__.py  server.py
servers/scb/src/scb_mcp/clients/: __init__.py  scb.py
servers/scb/src/scb_mcp/data/: __init__.py  regions.py
servers/scb/src/scb_mcp/tools/: __init__.py  data.py  metadata.py  regions.py
servers/skolverket/: mcp-config.toml.example  pyproject.toml
servers/skolverket/src/skolverket_mcp/: __init__.py  server.py
servers/skolverket/src/skolverket_mcp/clients/: __init__.py  planned_educations.py  school_registry.py  syllabus.py
servers/skolverket/src/skolverket_mcp/tools/: __init__.py  planned_educations.py  school_registry.py  syllabus.py
servers/time/: pyproject.toml
servers/time/src/time_mcp/: __init__.py  server.py
templates/server/: README.md  mcp-config.toml.example  pyproject.toml
templates/server/src/hk_example/: server.py
