[project]
name = "kolada"
version = "0.1.0"
description = "MCP-server för Koladas öppna API (svensk kommunal statistik)"
requires-python = ">=3.12"
dependencies = [
    "hk-core",
    "httpx>=0.28",
]

[project.scripts]
kolada = "kolada_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kolada_mcp"]

[tool.uv.sources]
hk-core = { workspace = true }
