[project]
name = "scb"
version = "0.1.0"
description = "MCP-server för Statistiska centralbyråns (SCB) PxWebAPI 2.0"
requires-python = ">=3.12"
dependencies = [
    "hk-core",
    "httpx>=0.28",
]

[project.scripts]
scb = "scb_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scb_mcp"]

[tool.uv.sources]
hk-core = { workspace = true }
