[project]
name = "skolverket"
version = "0.1.0"
description = "MCP-server för Skolverkets öppna API:er (läroplaner, kurser, skolor, statistik)"
requires-python = ">=3.12"
dependencies = [
    "hk-core",
    "httpx>=0.28",
]

[project.scripts]
skolverket = "skolverket_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skolverket_mcp"]

[tool.uv.sources]
hk-core = { workspace = true }
