[project]
name = "time"
version = "0.1.0"
description = "MCP-server för tid och tidszoner (IANA/zoneinfo)"
requires-python = ">=3.12"
dependencies = [
    "hk-core",
    "tzdata>=2024.1",
    "tzlocal>=5.2",
]

[project.scripts]
time = "time_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/time_mcp"]

[tool.uv.sources]
hk-core = { workspace = true }
