[project]
name = "hk-example"
version = "0.1.0"
description = "Exempelserver som visar mönstret för nya MCP-servrar"
requires-python = ">=3.12"
dependencies = [
    "hk-core",
]

[project.scripts]
hk-example = "hk_example.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hk_example"]

[tool.uv.sources]
hk-core = { workspace = true }
